bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n match {
    case i if i>89 && i<111 => return true
    case i if i>189 && i<211
    case _ => return false
  }
}